# friendclaw

./: .gitignore  README.md  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/skills/general/: SKILL.md
src-tauri/skills/navigate/: SKILL.md
src-tauri/skills/web_search/: SKILL.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: chat_sync.rs  commands.rs  exec.rs  health.rs  mod.rs  server.rs  types.rs
src-tauri/src/discord/: bot.rs  commands.rs  config.rs  mod.rs  types.rs
src-tauri/src/loadskills/: mod.rs
src-tauri/src/memory/: fs.rs  mod.rs
src-tauri/src/ollama/: chat.rs  headless.rs  mod.rs  models.rs  types.rs
src-tauri/src/phone/: overlay.rs  tools.rs
src-tauri/src/queue/: commands.rs  delivery.rs  mod.rs  store.rs
src-tauri/src/session/: commands.rs  mod.rs  store.rs  types.rs
src-tauri/src/stt/: commands.rs  mod.rs
src-tauri/src/web_search/: mod.rs  parser.rs  search.rs
src-tauri/tools/: device_status.json  memory.json  web_search.json
src/components/: AccessibilityDialog.tsx  ChatMessage.tsx  GenerateHashModal.tsx  InputBar.tsx  LinkHashModal.tsx  LinkedDevicesModal.tsx  Modal.tsx  QrPairModal.tsx  SettingsScreen.tsx  SideMenu.tsx  TopBar.tsx
src/hooks/: useOllamaChat.ts  useSession.ts  useStt.ts
src/types/: index.ts
