[package]
name = "phoneclaw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phoneclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# reqwest: HTTP client for calling the Ollama local API
# rustls-tls: pure-Rust TLS backend, avoids OpenSSL cross-compilation issues on Android
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# tokio: async runtime required by reqwest
tokio = { version = "1", features = ["full"] }
# futures-util: stream helpers (StreamExt) for reading NDJSON chunks
futures-util = "0.3"
# dotenvy: load key=value secret files (e.g. .secrets) into env vars at startup
dotenvy = "0.15"
# uuid: generate unique device IDs (v4 = random)
uuid = { version = "1", features = ["v4"] }
# sha2: hash user passphrase into a safe hash key (SHA-256)
sha2 = "0.10"
# hex: encode SHA-256 bytes as a hex string
hex = "0.4"
# axum: lightweight embedded HTTP server for the device bridge and ping endpoint
axum = "0.7"
# serenity: Discord bot framework using rustls (avoids OpenSSL, consistent with reqwest)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

